# OS-sibsutis

./: .gitignore  flake.nix
kursovaya/client/: ElfInfo.hpp  ElfViewer.hpp  TCPClient.hpp  TaskManagerClient.hpp  TaskManagerScreen.hpp  client.cpp  client1.cpp  client2.cpp
kursovaya/client/UI/: ScreenHandler.hpp  TaskManagerScreen.hpp
kursovaya/client/UI/ClientComponents/: ElfDataHandler.hpp  ProcessDataHandler.hpp
kursovaya/server/: server.cpp  server1.cpp
kursovaya/task_manager_elf_viewer/: CMakeLists.txt  compile_commands.json  main.cpp  main1.cpp
kursovaya/task_manager_elf_viewer/task-manager/: process_info.hpp  task_manager.hpp
kursovaya/task_manager_elf_viewer/ui/: home_screen.hpp  task_manager_screen.hpp
labs/lab2/: data.c  data.h  list.c  list.h  main.c
labs/lab8/: main  main.cpp  try.cpp
